src/objects/Market_Segment_Intelligence__c.object
<CustomObject>
    <description>EPS - Global Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Segment Intelligence</relationshipLabel>
        <relationshipName>Market_Segment_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Customer_Segment_Needs__c</fullName>
        <description>EPS-Global Accounts</description>
        <label>Customer Segment Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Position__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Market Position</label>
        <picklist>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche Orientation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Participation__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Market Segment Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polymer Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sealants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paints, Coatings and Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Branding__c</fullName>
        <description>EPS - Global Accounts</description>
        <label>Products/Branding</label>
        <type>TextArea</type>
    </fields>
    <label>Market Segment Intelligence</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Market Segment Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Segment Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>